Use modern "List.of()"